# feodorov-oop-lw-6

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: Board.cc  CMakeLists.txt  ComplexNum.cc  Composition.cc  Dim.cc  TheThing.cc  ThingGenerator.cc  lab3.cc
src/include/: Board.h  ComplexNum.h  Composition.h  Dim.h  TheThing.h  ThingGenerator.h
tests/: CMakeLists.txt  test_1.cc  test_2.cc  test_3.cc  test_4.cc  test_5.cc  test_6.cc
